Migrate to workspace project

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,6 @@
-[package]
-name = "sidecliq"
-version = "0.1.0"
-authors = ["Dax Huiberts <daxhuiberts@gmail.com>"]
-edition = "2018"
+[workspace]
 
-[dependencies]
-itertools = "*"
-redis = "0.9.1"
-serde = { version = "*", features = ["derive"] }
-serde_json = "*"
-serde_with = { version = "*", features = ["json"] }
-serde-redis = "*"
+members = [
+  "sidekiq-lib",
+  "sidekiq-cli",
+]
