--- a/sidekiq-warp/Cargo.toml
+++ b/sidekiq-warp/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["Dax Huiberts <daxhuiberts@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+serde = { version = "*", features = ["derive"] }
 sidekiq-lib = { path = "../sidekiq-lib" }
+tera = { version = "*", default-features = false }
 tokio = "*"
 warp = "*"
