Use include_dir to load in all template files without explicit naming

--- a/sidekiq-warp/Cargo.toml
+++ b/sidekiq-warp/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Dax Huiberts <daxhuiberts@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+include_dir = "*"
 hyper = "*"
 listenfd = "*"
 serde = { version = "*", features = ["derive"] }
