--- a/sidemon-lib/Cargo.toml
+++ b/sidemon-lib/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sidekiq-lib"
+name = "sidemon-lib"
 version = "0.1.0"
 authors = ["Dax Huiberts <daxhuiberts@gmail.com>"]
 edition = "2018"
