--- a/sidemon-warp/Cargo.toml
+++ b/sidemon-warp/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sidekiq-warp"
+name = "sidemon-warp"
 version = "0.1.0"
 authors = ["Dax Huiberts <daxhuiberts@gmail.com>"]
 edition = "2018"
@@ -9,7 +9,7 @@ include_dir = "*"
 hyper = "*"
 listenfd = "*"
 serde = { version = "*", features = ["derive"] }
-sidekiq-lib = { path = "../sidekiq-lib" }
+sidemon-lib = { path = "../sidemon-lib" }
 tera = { version = "*", default-features = false }
 tokio = { version = "0.2", features = ["full"] }
 warp = "*"
